host compiler is gcc

--- a/cookhack/Makefile
+++ b/cookhack/Makefile
@@ -2,7 +2,7 @@
 # path to tools
 #---------------------------------------------------------------------------------
 export PATH	:=	$(DEVKITARM)/bin:$(PATH)
-
+export CC	:=	gcc
 #---------------------------------------------------------------------------------
 # the prefix on the compiler executables
 #---------------------------------------------------------------------------------
